--- a/confusion/package.json
+++ b/confusion/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^3.0.4",
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -16,10 +17,12 @@
     "react-redux-form": "^1.16.14",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "url-join": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
